2013-07-14  Massimo Maggi <me@massimo-maggi.eu>

	* grub-core/fs/zfs/zfs.c: Split nvpair iterators into separate
	functions.

2013-07-14  Massimo Maggi <me@massimo-maggi.eu>

	* grub-core/fs/zfs/zfs_lz4.c: New file.
	* grub-core/fs/zfs/zfs.c: Tie up lz4 decompression.

2013-07-14  Massimo Maggi <me@massimo-maggi.eu>

	* grub-core/fs/zfs/zfs.c: Check for feature compatibility.

2013-07-14  Massimo Maggi <me@massimo-maggi.eu>

	* grub-core/fs/zfs/zfs.c (uberblock_verify): Accept version 5000.
	(check_pool_label): Likewise.
	* include/grub/zfs/zfs.h: Rewrite SPA_VERSION_* macros.

2013-07-14  Massimo Maggi <me@massimo-maggi.eu>

	* grub-core/fs/zfs/zfsinfo.c (print_vdev_info): Fix RAIDZ reporting.

2013-07-13  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Commands): Document postition parameters
	for menuentry command.

2013-07-13  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-mknetdir.in: Remove stray line from help output.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove early sm712 init as there is no reason for it (the "watchdog"
	effect was due to wrong GPIO map).

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/pcidump.c: Remove static variables.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/sleep.c: Refresh screen before sleeping.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Move delimiter after the infos.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/usbhub.c: Fix recheck logic.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (write_font_ascii_bitmap): Fix handling of glyphs
	not filling whole 8x16 space.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix spurios warning.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Indicate which liblzma is used if any.

2013-06-21  Paul Wise  <pabs3@bonedaddy.net>