@@ -1,5 +1,10 @@
 2013-07-14  Massimo Maggi <me@massimo-maggi.eu>
 
+	* grub-core/fs/zfs/zfs.c (nvlist_next_nvpair): Error is encode_size
+	<= 0.
+
+2013-07-14  Massimo Maggi <me@massimo-maggi.eu>
+
 	* grub-core/fs/zfs/zfs.c: Split nvpair iterators into separate
 	functions.
 
